--- a/.github/workflows/go-ossf-slsa3-publish.yml
+++ b/.github/workflows/go-ossf-slsa3-publish.yml
@@ -11,6 +11,7 @@
 # The provenance file can be verified using https://github.com/slsa-framework/slsa-verifier.
 # For more information about SLSA and how it improves the supply-chain, visit slsa.dev.
 
+
 name: SLSA Go releaser
 on:
   workflow_dispatch:
@@ -20,6 +21,20 @@ on:
 permissions: read-all
 
 jobs:
+
+- name: Ensure latest Go
+  # You may pin to the exact commit or the version.
+  # uses: jmhodges/ensure-latest-go@db34caa373314d0cbf407c7882e864418eb22f1a
+uses: jmhodges/ensure-latest-go@v1.0.2
+with:
+    # A comma-seperated list of file paths to not update.
+  exclude: # optional, default is 
+    # A comma-seperated list of Dockerfiles to update when a new Go version is released. If set, it will override the default behavior of updating any `golang` image Dockerfile in the repo.
+  dockerfiles: # optional, default is 
+    # A comma-seperated list of Travis CI config files to update when a new Go version is released. If set, it will override the default behavior of updating (but not creating) the "go" setting in a top-level .travis.yml file.
+  travisfiles: # optional, default is 
+          
+  
   # ========================================================================================================================================
   #     Prerequesite: Create a .slsa-goreleaser.yml in the root directory of your project.
   #       See format in https://github.com/slsa-framework/slsa-github-generator/blob/main/internal/builders/go/README.md#configuration-file
@@ -29,7 +44,7 @@ jobs:
       id-token: write # To sign.
       contents: write # To upload release assets.
       actions: read   # To read workflow path.
-    uses: slsa-framework/slsa-github-generator/.github/workflows/builder_go_slsa3.yml@v1.4.0
+    uses: slsa-framework/slsa-github-generator/.github/workflows/builder_go_slsa3.yml@latest
     with:
       go-version: 1.17
       # =============================================================================================================
